# cbgt

./: Cargo.toml  README.md  analysis.py  beta.py  con.py  ctx_stim.py  experiment.html  experiment.ipynb  experiment.md  experiment.py  flake.nix  gen_fig_ctx.py  perf.data  perf.data.old  poisson.py  pyproject.toml  run.sh  temnp.py
docs/: odes.typ
experiments/cluster/: BOUNDRY.toml  PARAMETERS.toml  functions.py
experiments/episodic/: BOUNDRY.toml  PARAMETERS.toml  functions.py
experiments/pathological/: BOUNDRY.toml  PARAMETERS.toml
experiments/test/: BOUNDRY.toml  PARAMETERS.toml  functions.py  gpe.parquet  stn.parquet
experiments/wave/: BOUNDRY.toml  PARAMETERS.toml  functions.py
experiments/wave_rt/: BOUNDRY.toml  PARAMETERS.toml
src/: DEFAULT.toml  PARAMETERS.toml  TEST.toml  ctx.rs  gpe.rs  gpi.rs  init.py  lfp.py  lib.rs  main.rs  network.rs  nework.rs  parameters.rs  plot.py  stn.rs  str.rs  test.py  thing.py  types.rs  util.rs
