[package]
name = "cbgt"
version = "0.1.0"
edition = "2021"

[lib]
name = "cbgt"
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.16.1"
ndarray-npy = "0.9.1"
pyo3 = { version = "0.24.0", features = ["extension-module"]}
numpy = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
