[package]
name = "cbgt"
version = "0.1.0"
edition = "2021"

[lib]
name = "cbgt"
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.16.1"
ndarray-npy = "0.9.1"
crossbeam = "0.8.4"
rand = "0.9.0"
pyo3 = "0.24.0"
numpy = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

