[package]
name = "cbgt"
version = "0.1.0"
edition = "2021"

[lib]
name = "cbgt"
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.16.1"
pyo3 = "0.23.0"
pyo3-polars = "0.20.0"
polars = { version = "0.46.0", features = ["parquet"]}
serde = { version = "1.0", features = ["derive"] }
struct-field-names-as-array = "0.3.0"
toml = "0.5"
env_logger = "0.11.8"
log = "0.4.27"
regex = "1.11.1"
uuid = { version = "1.4", features = ["v4"] } 
